app-manifests/pico-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-with-annotations
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "24m"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: pico.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pico-nginx-svc
            port:
              number: 80
